testsuite/poke.pkl/int-type-diag-2.pk
/* { dg-do compile } */

type foo = uint<65>; /* { dg-error "" } */
